# FerroS3

./: .gitignore  API.md  Cargo.toml  Dockerfile.freebsd11  LICENSE  Makefile  README.md  build-freebsd11.sh  config.yaml.example  openapi.yaml
.github/workflows/: ci.yml  release.yml
src/: blocking_http.rs  config.rs  error.rs  lib.rs  main.rs  openapi.rs  state.rs
src/auth/: mod.rs  sigv4.rs
src/handlers/: admin.rs  bucket.rs  list.rs  object.rs
tests/: filesystem_operations.rs
