[package]
name = "ferros3"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A high-performance, minimalist S3-compatible proxy written in Rust."

[dependencies]
tokio = { version = "=1.35.1", features = ["full"] }
axum = "=0.7.5"
hyper = { version = "1", features = ["http1", "server"] }
hyper-util = { version = "0.1", features = ["tokio", "service"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
chrono = "0.4"
base64 = "0.22"
sha2 = "0.10"
hmac = "0.12"
md-5 = "0.10"
quick-xml = { version = "0.36", features = ["serialize"] }
bytes = "1.0"
http = "1.0"
tower-http = { version = "=0.5.2", features = ["full"] }
walkdir = "2.3"
mime_guess = "2.0"
urlencoding = "2.1"
dashmap = "6.0" # Thread-safe cache
tokio-util = { version = "0.7", features = ["io"] }
tower = { version = "0.4", features = ["util"] }
futures-util = "0.3"
hex = "0.4"
utoipa = { version = "5", features = ["axum_extras", "chrono"] }

[build-dependencies]
cc = "1.0"
